# NgoiSigma-NOVEYA-FDL-ResourceNorm_v0.1

./: LICENSE  LICENSE-ETHICS.md  METHODOLOGY_LICENSE.txt  README.md  openapi.yaml  pyproject.toml
api/: server.py
docs/: architecture.md  glyph_syntax.md  one_pager.md  pitch.md
examples/: regulate_energy.py  regulate_memory.py
src/noveya_fdl/: fdl_tokens.py  norm_engine.py  tokenizer.py
tests/: test_regulator.py
tokens/: participation_boundary.yaml  resource_normativity.yaml
unicode/: glyphs.js
